feat: establish initial backend architecture with task, payment, allowance, identity, notification, AI, and subscription modules.